--- a/site_source/_data/sdks.yml
+++ b/site_source/_data/sdks.yml
@@ -1,63 +1,6 @@
 ---
-- shortdesc: Python language bindings for OpenStack Clouds.
-  description: |
-    pyrax
-
-    Python SDK for OpenStack/Rackspace APIs
-
-    See the COPYING file for license and copyright information.
-
-    pyrax should work with most OpenStack-based cloud deployments, though it specifically targets the Rackspace public cloud. For example, the code for cloudfiles contains the ability to publish your content on Rackspace's CDN network, even though CDN support is not part of OpenStack Swift. But if you don't use any of the CDN-related code, your app will work fine on any standard Swift deployment.
-
-    See the Release Notes for what has changed in the latest release
-
-
-    * Getting Started with OpenStack/Rackspace
-    To sign up for a Rackspace Cloud account, go to http://www.rackspace.com/cloud and follow the prompts.
-
-    If you are working with an OpenStack deployment, you can find more information at http://www.openstack.org.
-
-
-    * Requirements
-      - A Rackspace Cloud account
-      - username
-      - API key
-      - Python 2.7
-          Note: pyrax is not yet tested yet with other Python versions. Please post feedback about what works or does not work with other versions. See the Support and Feedback section below for where to post.
-
-
-    * Installation
-    The best way to install pyrax is by using pip to get the latest official release:
-
-        pip install pyrax
-
-    If you would like to work with the current development state of pyrax, you can install directly from trunk on GitHub:
-
-        pip install git+git://github.com/rackspace/pyrax.git
-
-    If you are not using virtualenv, you will need to run pip install as admin using sudo.
-
-    You may also download and install from source. The source code for pyrax is available on GitHub.
-
-    Once you have the source code, cd to the base directory of the source and run (using sudo, if necessary):
-
-        python setup.py install
-
-
-    * Updates
-    If you installed pyrax using pip, it is simple to get the latest updates from either PyPI or GitHub:
-
-        # PyPI
-        pip install --upgrade pyrax
-        # GitHub
-        pip install --upgrade git+git://github.com/rackspace/pyrax.git
-
-
-    * Support and Feedback
-    Your feedback is appreciated! If you have specific issues with the pyrax SDK, developers should file an issue via Github. For general feedback and support requests, send an email to: sdk-support@rackspace.com.
-  homepage: https://github.com/rackspace/pyrax
-  name: pyrax
-- download_page: https://github.com/jclouds/jclouds
+- project: http://rdfohloh.wikier.org/project/jclouds
+  download_page: https://github.com/jclouds/jclouds
   description: Apache jclouds is an open-source framework that helps you get started
     in the cloud and reuse your Java development skills. Our API allows you to freedom
     to use portable abstractions or cloud-specific features.  We support many clouds
@@ -65,7 +8,8 @@
   programming_language: Java
   homepage: http://jclouds.apache.org/
   name: Apache jclouds
-- mailing_list: http://libcloud.apache.org/devinfo.html
+- project: http://libcloud.apache.org
+  mailing_list: http://libcloud.apache.org/devinfo.html
   bug_database: https://issues.apache.org/jira/browse/LIBCLOUD
   category: http://projects.apache.org/category/cloud
   license: http://usefulinc.com/doap/licenses/asl20
@@ -78,7 +22,14 @@
   programming_language: Python
   homepage: http://libcloud.apache.org
   name: Apache Libcloud
-- mailing_list: http://libcloud.apache.org/devinfo.html
+- project: http://rdfohloh.wikier.org/project/pyrax
+  download_page: https://github.com/rackspace/pyrax/downloads
+  description: Python language bindings for the Rackspace Cloud.
+  programming_language: Python
+  homepage: https://github.com/rackspace/pyrax
+  name: pyrax
+- project: http://libcloud.apache.org
+  mailing_list: http://libcloud.apache.org/devinfo.html
   bug_database: https://issues.apache.org/jira/browse/LIBCLOUD
   category: http://projects.apache.org/category/library
   license: http://usefulinc.com/doap/licenses/asl20
