--- a/site_source/_data/sdks.yml
+++ b/site_source/_data/sdks.yml
@@ -1,44 +1,34 @@
 ---
-- project: http://rdfohloh.wikier.org/project/jclouds
-  download_page: https://github.com/jclouds/jclouds
+- name: Apache jclouds
+  homepage: http://jclouds.apache.org/
+  programming_language: Java
   description: Apache jclouds is an open-source framework that helps you get started
     in the cloud and reuse your Java development skills. Our API allows you to freedom
     to use portable abstractions or cloud-specific features.  We support many clouds
     including Amazon, Azure, Rackspace, and VMWare.
-  programming_language: Java
-  homepage: http://jclouds.apache.org/
-  name: Apache jclouds
-- project: http://libcloud.apache.org
-  mailing_list: http://libcloud.apache.org/devinfo.html
-  bug_database: https://issues.apache.org/jira/browse/LIBCLOUD
-  category: http://projects.apache.org/category/cloud
-  license: http://usefulinc.com/doap/licenses/asl20
-  download_page: http://libcloud.apache.org/downloads.html
-  shortdesc: Apache Libcloud is a standard Python library that abstracts away differences
-    among multiple cloud provider APIs.
-  description: Apache Libcloud is a standard Python library that abstracts away differences
-    among multiple cloud provider APIs. It allows users to manage cloud servers, cloud
-    storage and load-balancers.
-  programming_language: Python
-  homepage: http://libcloud.apache.org
-  name: Apache Libcloud
-- project: http://rdfohloh.wikier.org/project/pyrax
-  download_page: https://github.com/rackspace/pyrax/downloads
-  description: Python language bindings for the Rackspace Cloud.
-  programming_language: Python
+  shortdesc: 
+  download_page: https://github.com/jclouds/jclouds
+  license: 
+  bug_database: 
+  mailing_list: 
+- name: pyrax
   homepage: https://github.com/rackspace/pyrax
-  name: pyrax
-- project: http://libcloud.apache.org
-  mailing_list: http://libcloud.apache.org/devinfo.html
-  bug_database: https://issues.apache.org/jira/browse/LIBCLOUD
-  category: http://projects.apache.org/category/library
-  license: http://usefulinc.com/doap/licenses/asl20
-  download_page: http://libcloud.apache.org/downloads.html
-  shortdesc: Apache Libcloud is a standard Python library that abstracts away differences
-    among multiple cloud provider APIs.
+  programming_language: Python
+  description: Python language bindings for the Rackspace Cloud.
+  shortdesc: 
+  download_page: https://github.com/rackspace/pyrax/downloads
+  license: 
+  bug_database: 
+  mailing_list: 
+- name: Apache Libcloud
+  homepage: http://libcloud.apache.org
+  programming_language: Python
   description: Apache Libcloud is a standard Python library that abstracts away differences
     among multiple cloud provider APIs. It allows users to manage cloud servers, cloud
     storage and load-balancers.
-  programming_language: Python
-  homepage: http://libcloud.apache.org
-  name: Apache Libcloud
+  shortdesc: Apache Libcloud is a standard Python library that abstracts away differences
+    among multiple cloud provider APIs.
+  download_page: http://libcloud.apache.org/downloads.html
+  license: http://usefulinc.com/doap/licenses/asl20
+  bug_database: https://issues.apache.org/jira/browse/LIBCLOUD
+  mailing_list: http://libcloud.apache.org/devinfo.html
